--- a/circles/9.10.5.1/circle2.tex
+++ b/circles/9.10.5.1/circle2.tex
@@ -34,13 +34,11 @@ Q1. In Figure 1. $\vec{A,B,C}$ are the three points with centre $\vec{O}$ such t
   & \textbf{value} & \textbf{Description} \\
  \hline
 	    r &1 unit& Radius of OA and OB\\ \hline
-	    $\vec{O}$ &(1,0) & Centre of the circle\\ \hline
-	    $\vec{P}$ &(0,0) & It is a point on the circle forms a diameter\\\hline
-	    $\alpha$ & 180\degree&Angle between vectors $\vec{P} \text{ and } \vec{C}$ \\ \hline
-	    $\beta$ & 90\degree&Angle between vectors $\vec{P} \text{ and } \vec{A}$ \\ \hline
-	    $\gamma$ & 300\degree&Angle between vectors $\vec{P} \text{ and } \vec{D}$ \\ \hline
-	    $\phi$ & 150\degree&Angle between vectors $\vec{P} \text{ and } \vec{B}$ \\ \hline
- $\vec{C},\vec{A},\vec{D},\vec{B}$ &(2,0), (1,1), (0.5,-0.86), (1.86,0.5) & Points obtained from $\alpha$,$\beta$,$\gamma$,$\phi$\\ \hline
+	    $\vec{O}$ &\myvec{0\\r} & Centre of the circle\\ \hline
+	    $\vec{C}$ &\myvec{1\\0} & Standard basis vector $\vec{e}_1$\\ \hline
+	    $\alpha$ & 30\degree&Angle between vectors $\vec{B} \text{ and } \vec{C}$ w.r.t $\vec{O}$ \\ \hline
+	    $\beta$ & 60\degree&Angle between vectors $\vec{A} \text{ and } \vec{B}$ w.r.t $\vec{O}$ \\ \hline
+	    $\gamma$ & ??&Angle between vectors $\vec{A} \text{ and } \vec{C}$ w.r.t $\vec{D}$ \\ \hline
 \end{tabular}   
 \end{center}
 \caption{\label{table:dummytable} }
