--- a/circles/9.10.5.1/circle2.tex
+++ b/circles/9.10.5.1/circle2.tex
@@ -43,11 +43,15 @@ Q1. In Figure 1. $\vec{A},\vec{B},\vec{C}$ are the three points with centre $\ve
 \end{figure}
 \section*{\large Construction}
 
-\begin{table}[ht!]
-\input{tables/table1.tex}
-\caption{}
-\label{Table-1} 
-\end{table}
+\begin{table}[h!]
+	\small
+	\centering
+	%\subimport{../tables/}{table1.tex}
+     \input{tables/table1.tex}
+%	\caption{}
+	\label{table:table1}
+	\end{table}
+
 
 
 \section*{\large Assumptions}
