--- a/circles/9.10.5.1/tables/table1.tex
+++ b/circles/9.10.5.1/tables/table1.tex
@@ -233,7 +233,7 @@
 	&\multicolumn{1}{p{\gnumericColB}|}%
 	{\gnumericPB{\raggedright}\gnumbox[l]{30\degree}}
 	&\multicolumn{1}{p{\gnumericColC}|}%
-	{\gnumericPB{\raggedright}\gnumbox[l]{Angle between vectors $\vec{B}$ and $\vec{C}$ w.r.t $\vec{O}$}}
+	{\gnumericPB{\raggedright}\gnumbox[l]{$\angle$BOC}}
 \\
 \hhline{|---|}
 	 \multicolumn{1}{|p{\gnumericColA}|}%
@@ -241,7 +241,7 @@
 	&\multicolumn{1}{p{\gnumericColB}|}%
 	{\gnumericPB{\raggedright}\gnumbox[l]{60\degree}}
 	&\multicolumn{1}{p{\gnumericColC}|}%
-	{\gnumericPB{\raggedright}\gnumbox[l]{Angle between vectors $\vec{A}$ and $\vec{B}$ w.r.t $\vec{O}$}}
+	{\gnumericPB{\raggedright}\gnumbox[l]{$\angle$AOB}}
 \\
 \hhline{|---|}
 	 \multicolumn{1}{|p{\gnumericColA}|}%
@@ -249,7 +249,7 @@
 	&\multicolumn{1}{p{\gnumericColB}|}%
 	{\gnumericPB{\raggedright}\gnumbox[l]{??}}
 	&\multicolumn{1}{p{\gnumericColC}|}%
-	{\gnumericPB{\raggedright}\gnumbox[l]{Angle between vectors $\vec{A}$ and $\vec{C}$ w.r.t $\vec{D}$}}
+	{\gnumericPB{\raggedright}\gnumbox[l]{$\angle$ADC}}
 \\
 \hhline{|-|-|-|}
 \end{longtable}
