--- a/circles/9.10.5.1/tables/table1.tex
+++ b/circles/9.10.5.1/tables/table1.tex
@@ -215,7 +215,7 @@
 	 \multicolumn{1}{|p{\gnumericColA}|}%
 	{\gnumericPB{\raggedright}\gnumbox[l]{$\vec{O}$}}
 	&\multicolumn{1}{p{\gnumericColB}|}%
-	{\gnumericPB{\raggedright}\gnumbox[l]{\myvec{0\\r}}}
+	{\gnumericPB{\raggedright}\gnumbox[l]{\myvec{0\\0}}}
 	&\multicolumn{1}{p{\gnumericColC}|}%
 	{\gnumericPB{\raggedright}\gnumbox[l]{Center of the circle }}
 \\
