--- a/circles/9.10.6.1/circle3.tex
+++ b/circles/9.10.6.1/circle3.tex
@@ -153,63 +153,56 @@ The conic equation is given by:
  \vec{x}^\top\vec{V}\vec{x}+2\vec{u}^\top\vec{x}+f=0, 
   \label{eq:17}
  \end{align}
-By substituting \eqref{eq:14},\eqref{eq:15} and \eqref{eq:16} in conic equation \eqref{eq:17}, we get point of contact $\vec{q}$::
+By substituting \eqref{eq:14},\eqref{eq:15} and \eqref{eq:16} in conic equation \eqref{eq:17}:
 \begin{align}
 	\myvec{x&y}\myvec{0&0\\0&0}\myvec{x\\y}+2\myvec{4&0}\myvec{x\\y}-21&=0\\
 \implies	8x&=21\\
 \implies	x&=\frac{21}{8}
+\label{eq:20}
 \end{align}
-	The point of contact $\vec{q}$ is given by:
-	\begin{align}
-	\vec{q}&=x\vec{e}_1=\myvec{\frac{21}{8}\\[2pt]0}
-\end{align}
-The points of intersection of line is given by: 
+From equation \eqref{eq:20}, the staright line between the intersection of two circles is given by:
 \begin{align}
-L: \quad \vec{x} = \vec{q} + \kappa \vec{m} \quad \kappa \in \mathbb{R}
+\myvec{1&0}\vec{x}&=\frac{21}{8}\\
+\vec{x}&=\myvec{\frac{21}{8}\\\lambda}\\
+\vec{x}&=\myvec{\frac{21}{8}\\0}+\lambda\myvec{0\\1}\label{eq:23}
 \end{align}
-with the conic section, we have:
- \begin{align}
- \vec{x}_i = \vec{q} + \kappa_i \vec{m}
- \end{align}
- where, 
+		Equation \eqref{eq:23} can be expressed in the form of parametric equation
 \begin{align}
-\kappa_i = \frac{1}
-{\vec{m}^T\vec{V}\vec{m}}
-\lbrak{-\vec{m}^T\brak{\vec{V}\vec{q}+\vec{u}}}
-\pm
-\rbrak{\sqrt{
-\sbrak{
-\vec{m}^T\brak{\vec{V}\vec{q}+\vec{u}}
-}^2
--
-\brak
-{
-\vec{q}^T\vec{V}\vec{q} + 2\vec{u}^T\vec{q} +f
-}
-\brak{\vec{m}^T\vec{V}\vec{m}}
-}
-}
-\label{eq:24}
+	\vec{x}=\vec{q}+\lambda\vec{m}\label{eq:24}
 \end{align}
-On substituting the below values in \eqref{eq:24}
+The distance form origin to point $\vec{x}$ is given by
 \begin{align}
- \vec{m}=\vec{e}_2,\vec{V}=\vec{I},\vec{u}=\myvec{0\\0},\vec{q}=\myvec{\frac{13}{5}\\[2pt]0},f=-9
+	\norm{\vec{x}}^2&=d^2\label{eq:25}
 \end{align}
-We get,
+		Then substituting \eqref{eq:24} in \eqref{eq:25} yeilds,
 \begin{align}
-\kappa_i=-\frac{29}{20},+\frac{29}{20}
+	&\implies\brak{\vec{q}+\lambda\vec{m}}^{\top}\brak{\vec{q}+\lambda\vec{m}}=d^2\\
+	&\implies \vec{q}^{\top}\vec{q}+\brak{\lambda\vec{m}}^{\top}\lambda\vec{m}+\vec{q}^{\top}\lambda\vec{m}+\brak{\lambda\vec{m}}^{\top}\vec{q}=d^2\\
+	&\implies \norm{\vec{q}}^2+\lambda^2\norm{\vec{m}}^2+2\lambda\vec{q}^{\top}\vec{m}=d^2\\
+	&\implies \lambda^2\norm{\vec{m}}^2+2\lambda\vec{q}^{\top}\vec{m}+\norm{\vec{q}}^2=d^2\label{eq:29}
+\end{align}
+where
+\begin{align}
+	\vec{q}=\myvec{\frac{21}{8}\\0},\vec{m}=\myvec{0\\1} \text{ and } d=r_1=3
+	\label{eq:30}
+\end{align}
+		substituting the values of \eqref{eq:30} in \eqref{eq:29} gives
+\begin{align}
+	&\implies\lambda^2(1)+2\lambda\myvec{\frac{21}{8}&0}\myvec{0\\1}+\frac{441}{64}=9\\
+	&\implies\lambda^2=\frac{135}{64}\\
+	&\implies\lambda_i=\pm\frac{3\sqrt{5}}{8}
 \end{align}
 The intersecting points $\vec{C}$ and $\vec{D}$ are given by:
 \begin{align}
-    \vec{C}&=\vec{q}+\kappa_1\vec{m}=\myvec{\frac{21}{8}\\[2pt]-\frac{29}{20}}\\
-    \vec{D}&=\vec{q}+\kappa_2\vec{m}=\myvec{\frac{21}{8}\\[2pt]\frac{29}{20}}
+    \vec{C}&=\vec{q}+\lambda_1\vec{m}=\myvec{\frac{21}{8}\\[2pt]-\frac{3\sqrt{5}}{8}}\\
+    \vec{D}&=\vec{q}+\lambda_2\vec{m}=\myvec{\frac{21}{8}\\[2pt]\frac{3\sqrt{5}}{8}}
 \end{align}
-Check whether the intersection angles $\angle$ADB and $\angle$ACB are equal or not:
+		Check whether the intersection angles $\angle$ADB and $\angle$ACB are equal or not:
 \begin{enumerate}
 \item Finding $\angle$ADB:
 	\begin{align}
-		 \vec{A-D} = \myvec{-\frac{21}{8}\\[2pt]-\frac{29}{20}},
-		\vec{B-D}& = \myvec{\frac{11}{8}\\[2pt]-\frac{21}{8}}\\
+		 \vec{A-D} = \myvec{-\frac{21}{8}\\[2pt]-\frac{3\sqrt{5}}{8}},
+		\vec{B-D}& = \myvec{\frac{11}{8}\\[2pt]-\frac{3\sqrt{5}}{8}}\\
 	 \vec{(A-D)^\top(B-D)}&= -\frac{3}{2}\\
 	 \norm{\vec{A-D}}\norm{\vec{C-D}}& = 6\\
 		\cos(\angle ADB)& = \frac{\vec{(A-D)^\top(B-D)}}{\norm{\vec{A-D}}\norm{\vec{B-D}}}\\
@@ -217,8 +210,8 @@ Check whether the intersection angles $\angle$ADB and $\angle$ACB are equal or n
 \end{align}
 \item Finding $\angle$ACB:
 \begin{align}
-	\vec{A-C} = \myvec{-\frac{21}{8}\\[2pt]\frac{29}{20}},
-	 \vec{B-C}& = \myvec{\frac{11}{8}\\[2pt]\frac{29}{20}}\\
+	\vec{A-C} = \myvec{-\frac{21}{8}\\[2pt]\frac{3\sqrt{5}}{8}},
+	 \vec{B-C}& = \myvec{\frac{11}{8}\\[2pt]\frac{3\sqrt{5}}{8}}\\
 	 \vec{(A-C)^\top(B-C)}&= -\frac{3}{2}\\
 	 \norm{\vec{A-C}}\norm{\vec{B-C}}& = 6\\
 	 \cos(\angle ACB) &= \frac{\vec{(A-C)^\top(B-C)}}{\norm{\vec{A-C}}\norm{\vec{B-C}}}\\
