--- a/Bluetooth-controlled-Digitalmode/docs/ugv_btdoc.tex
+++ b/Bluetooth-controlled-Digitalmode/docs/ugv_btdoc.tex
@@ -176,12 +176,12 @@ USB-UART &  & 1 \\
 \end{tabular}
   \item Flash the following setup code through USB-UART using laptop
 \begin{center}
-\fbox{\parbox{8cm}{\url{https://github.com/likhith1101/Wi-Fi-controlled-UGV/blob/main/codes/src/main.ino}}}
+\fbox{\parbox{8cm}{\url{https://github.com/likhith1101/fwcassgn/tree/main/Bluetooth-controlled-Digitalmode/codes}}}
 \end{center}
 \begin{center}
 \end{center}
 \begin{lstlisting}
-svn co https://github.com/likhith1101/Wi-Fi-controlled-UGV
+svn co https://github.com/likhith1101/fwcassgn/tree/main/Bluetooth-controlled-Digitalmode
 cd codes
 pio run
 pio run -t upload
