--- a/Bluetooth-controlled-Digitalmode/docs/ugv_btdoc.tex
+++ b/Bluetooth-controlled-Digitalmode/docs/ugv_btdoc.tex
@@ -110,13 +110,9 @@ JumperWires& M-F, F-F& 15 \\
 \hline
 Breadboard &  & 1 \\
 \hline
-UGV-kit &  & 1 \\
-\hline
 Seven-Segment display & & 1\\
 \hline
 Resistor & 220 & 1\\
-\hline
-Motor Driver IC & L293 & 1\\
 \hline
 USB-UART &  & 1 \\
 \hline
@@ -132,7 +128,7 @@ USB-UART &  & 1 \\
 	}
 \hhline{|-|-}
 	 \multicolumn{1}{|p{\gnumericColA}|}%
-	{\gnumericPB{\centering}\gnumbox{{\color[rgb]{0.79,0.13,0.12} VAMAN LC PINS}}}
+	{\gnumericPB{\centering}\gnumbox{{\color[rgb]{0.79,0.13,0.1} VAMAN LC PINS}}}
 	&\multicolumn{1}{p{\gnumericColB}|}%
 	{\gnumericPB{\centering}\gnumbox{{\color[rgb]{0.79,0.13,0.12} UART PINS}}}
 \\
@@ -248,4 +244,4 @@ pio run -t upload
 Now you can observe the changes on sevensegment display for every key pressed on the joystick on the android application
 
 \end{enumerate}
-\end{document}
+\end{document}2
